Bug Issue 294 Fixed edit task
